# engine-v1

./: .gitignore  README.md  package-lock.json  package.json
desktop/: CMakeLists.txt  CreateShortcut.ps1  CreateWebAppShortcut.ps1  README.md  Run-QuantumSuite.bat  Run-QuantumSuite.ps1
desktop/include/: animation_sequence.hpp  workspace.hpp
desktop/src/: animation_sequence.cpp  main.cpp  main_smith.cpp  workspace.cpp
ecosystem/engine-runtime/: CMakeLists.txt  README.md
ecosystem/engine-runtime/include/: game_runtime.hpp
ecosystem/engine-runtime/src/: game_runtime.cpp  main.cpp
ecosystem/engine-runtime/tools/: build_windows_x64.bat
ecosystem/go/sync_server/: main.go
ecosystem/native/animation/: animation_math.hpp
ecosystem/native/ecs/: ecs.cpp  ecs.hpp
ecosystem/native/render/: denoiser.comp.glsl  particles.comp.glsl  path_tracer.comp.glsl  renderer.cpp  renderer.hpp
ecosystem/node/: sync-server.ts
ecosystem/odin/: runtime_vm.odin
ecosystem/python/: asset_baker.py
ecosystem/rust/asset_pipeline/: Cargo.toml
ecosystem/rust/asset_pipeline/src/: lib.rs
ecosystem/specs/: game-format-v1.md
ecosystem/web/: bridge.ts
ecosystem/web/ide/app/: page.tsx
ecosystem/zig/: runtime_vm.zig
src/: App.tsx  index.css
src/components/: EngineViewport.tsx  IDEPanel.tsx
src/lib/: export-bundle.ts  game-format.ts  toolchain-store.ts
src/types/: external-modules.d.ts
